# inplace_vector

./: CMakeLists.txt  README.md
include/mtp/: inplace_vector.hpp
module/: inplace_vector.cppm
test/: CMakeLists.txt  inplace_vector_test.cpp
